# bump-hunter

./: CMakeLists.txt  README.md
include/fit/: BumpHunter.h  HpsFitResult.h
include/utils/: FitPrinter.h
src/fit/: BumpHunter.cxx  CMakeLists.txt  HpsFitResult.cxx  bump_hunter.cxx
src/utils/: CMakeLists.txt  FitPrinter.cxx
